Improve   .gitignore 	image fix   _javascript/utils/img-extra.js 	image fix   _sass/addon/commons.scss 	Bump Update   _sass/jekyll-theme-chirpy.scss 	Paginator fixed on mobile   _sass/layout/home.scss 	improve   assets/js/dist/page.min.js 	improve   assets/js/dist/post.min.js

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -107,6 +107,7 @@ a {
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 blockquote {
@@ -740,12 +741,12 @@ $sidebar-display: "sidebar-display";
 
     @for $i from 1 through $tab-count {
       $offset: $tab-count - $i;
-      $top: -$offset * $tab-height + $tab-cursor-height / 2;
+      $top: -$offset * $tab-height + ($tab-height - $tab-cursor-height) / 2;
 
       @if $i < $tab-count {
         > li.active:nth-child(#{$i}),
         > li.nav-item:nth-child(#{$i}):hover {
-          ~li:last-child::after {
+          ~ li:last-child::after {
             @include fix-cursor($top);
           }
         }
